# Project-W

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: cppwinrt.cmake  deps.cmake
engine/: CMakeLists.txt
engine/include/: graphics.h  swapchain.h
engine/include/base/: async_queue.h  atomic_buffer.h  atomic_queue.h  await.h  await_traits.h  event_count.h  result.h  stealing_deque.h  tasks.h  thread_pool.h  xoshiro.h
engine/include/ecs/: camera.h  transform.h
engine/include/gfx/: graphics.h  misc.h  platform.h  swapchain.h
engine/include/math/: matrix.h  matrix_math.h  quaternion.h  quaternion_math.h  vector.h  vector_math.h
engine/include/platform/sdl/: sdl.h  window.h
engine/include/platform/shared/: window_event.h
engine/src/base/: thread_pool.cpp
engine/src/gfx/: graphics.cpp  platform.cpp  swapchain.cpp
engine/src/sdl/: sdl.cpp  window.cpp
game/: CMakeLists.txt
game/include/: app.h  window.h
game/src/: app.cpp  entry_main.cpp  window.cpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  async_queue.cpp  coro_test.cpp  math_test.cpp
